# aigravscode

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  package.json  pyproject.toml  requirements.txt
.agent/: AGENTS.md  MEMORY.md
.agent/rules/: RULES.md
.agent/skills/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
src/aigravscode/: __init__.py  agent.py  config.py  llm.py  main.py  utils.py
tests/: test_main.py
